tests/miniJava/neg/000022_mutation.MiniJava
class java class java { public static void Main ( String [ ] java ) { { } } } public static void Main ( String [ ] java ) { { } } }
